@@ -34,7 +34,7 @@ struct _DilloPrefs {
    int xpos;
    int ypos;
    char *http_language;
-   DilloUrl *http_proxy;
+   char *http_proxy;
    char *http_proxyuser;
    char *http_referer;
    char *no_proxy;
